--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
  
-   <a href="" target="_blank">
+   <a href=" www.linkedin.com/in/adebola-dada-846231203" target="_blank">
      <i class="fa-brands fa-linkedin"></i>
         <span>Linkedin</span>
     </a>
@@ -28,16 +28,16 @@
     <div class="img"><img src="./img001.png" alt="adebola pic">
     </div>  
     <div class="links">
-      <a href="#Skills">
+      <a href="index.html">
           <i class="fa fa-code" aria-hidden="true"></i>
-          <span>About me</span>
+          <span>Home</span>
       </a>
   </div>
 
   <div class="links">
-          <a href="#contact me">
+          <a href="index2.html">
               <i class="fa fa-pen" aria-hidden="true"></i>
-              <span>Contact</span>
+              <span>Activties</span>
           </a>
   </div>
 </section>
